Added joining tutorial

--- a/Code/tidyDataPractice.html
+++ b/Code/tidyDataPractice.html
@@ -290,15 +290,89 @@ head(species_mean)</code></pre>
 ## 4 Pink     1997   4797133.      15
 ## 5 Sockeye  1997   2072400       15
 ## 6 Chinook  1996     32000       17</code></pre>
-<ul>
-<li>General QA</li>
-</ul>
 </div>
 <div id="join-the-region-definitions" class="section level1">
 <h1>Join the Region Definitions</h1>
+<p>Let’s join the region name together with the cleaned catch information</p>
+<p>We’ll use a left join - we’ll end up with same number of rows as left-hand df, and additional columns from the right hand df (excluding the key columns, which are already there).</p>
+<p>If there were two different values for the key in table 2, it will return two rows for that information (so you’ll end up with more rows than you expected). This means something might be wrong and you need to look it up.</p>
+<p>First, bring in the <a href="%22https://knb.ecoinformatics.org/knb/d1/mn/v2/object/df35b.303.1%22%22">regional definitions csv</a>, from the same source data listed at the top.</p>
+<pre class="r"><code>region_defs &lt;- read.csv(url(&quot;https://knb.ecoinformatics.org/knb/d1/mn/v2/object/df35b.303.1&quot;,
+                            method = &quot;libcurl&quot;),
+                        stringsAsFactors = FALSE) %&gt;% 
+    select(code, mgmtArea)
+
+head(region_defs)</code></pre>
+<pre><code>##      code                                  mgmtArea
+## 1     GSE              Unallocated Southeast Alaska
+## 2     NSE                 Northern Southeast Alaska
+## 3     SSE                 Southern Southeast Alaska
+## 4     YAK                                   Yakutat
+## 5 PWSmgmt      Prince William Sound Management Area
+## 6     BER Bering River Subarea Copper River Subarea</code></pre>
+<p>Now, let’s practice the join.</p>
+<ul>
+<li>Initial join attempt didn’t work because they don’t have similar column names (e.g. region vs. Code).
+<ul>
+<li>Can set the variables to join on by using the by = … argument</li>
+<li>can even set that Region = code using the by = … command - haven’t seen that before.</li>
+<li>Can also set multiple key-value pairs using the by = … command e.g.
+<ul>
+<li>by = c(“Region” = “Code”, “Community” = “City”)…region and community are from the first data frame, code and city are from the second data frame.<br />
+</li>
+</ul></li>
+<li>Can use antijoin() to check for non-matching sets, catch spelling errors, etc.</li>
+</ul></li>
+</ul>
+<pre class="r"><code>catch_joined &lt;- left_join(catch_clean, region_defs, by = c(&quot;Region&quot; = &quot;code&quot;))
+
+head(catch_joined)</code></pre>
+<pre><code>##   Region Year species catch                  mgmtArea
+## 1    SSE 1886 Chinook     0 Southern Southeast Alaska
+## 2    SSE 1887 Chinook     0 Southern Southeast Alaska
+## 3    SSE 1888 Chinook     0 Southern Southeast Alaska
+## 4    SSE 1889 Chinook     0 Southern Southeast Alaska
+## 5    SSE 1890 Chinook     0 Southern Southeast Alaska
+## 6    SSE 1891 Chinook     0 Southern Southeast Alaska</code></pre>
 </div>
-<div id="miscellaneous-functions" class="section level1">
-<h1>Miscellaneous functions</h1>
+<div id="separate-and-unite" class="section level1">
+<h1>separate() and unite()</h1>
+<ul>
+<li>separate() will separate one column into multiple columns by splitting at some non-alpha numeric character (or by regular expressions)</li>
+<li>unite() brings things together - opposite of separate</li>
+</ul>
+<p>ISO date: year-twodigitmonth-year…split by dashes, this is the preferred date format</p>
+<pre class="r"><code>dates_df &lt;- data.frame(date = c(&quot;5/24/1930&quot;,
+                                &quot;5/25/1930&quot;,
+                                &quot;5/26/1930&quot;,
+                                &quot;5/27/1930&quot;,
+                                &quot;5/28/1930&quot;),
+                       stringsAsFactors = FALSE)
+
+dates_split &lt;- dates_df %&gt;% 
+  separate(date, into = c(&quot;month&quot;, &quot;day&quot;, &quot;year&quot;),  sep = &quot;/&quot;, remove = F)
+head(dates_split)</code></pre>
+<pre><code>##        date month day year
+## 1 5/24/1930     5  24 1930
+## 2 5/25/1930     5  25 1930
+## 3 5/26/1930     5  26 1930
+## 4 5/27/1930     5  27 1930
+## 5 5/28/1930     5  28 1930</code></pre>
+<pre class="r"><code>dates_unite &lt;- dates_split %&gt;% 
+  unite(col = date_iso, year, month, day, sep = &quot;-&quot;)
+head(dates_unite)</code></pre>
+<pre><code>##        date  date_iso
+## 1 5/24/1930 1930-5-24
+## 2 5/25/1930 1930-5-25
+## 3 5/26/1930 1930-5-26
+## 4 5/27/1930 1930-5-27
+## 5 5/28/1930 1930-5-28</code></pre>
+<p>Can pad strings - and only strings that aren’t already 2 digits. Can be helpful if May written in data as “5” instead of “05”. Use <strong>str_pad()</strong> function from stringr package.</p>
+<pre class="r"><code>library(stringr)
+
+month &lt;- c(&quot;12&quot;, &quot;5&quot;, &quot;03&quot;, &quot;4&quot;)
+str_pad(month, 2, side = &quot;left&quot;, pad = &quot;0&quot;)</code></pre>
+<pre><code>## [1] &quot;12&quot; &quot;05&quot; &quot;03&quot; &quot;04&quot;</code></pre>
 </div>
 
 
